--- a/src/Components/PortfolioPage/PortfolioPage.css
+++ b/src/Components/PortfolioPage/PortfolioPage.css
@@ -20,6 +20,8 @@
   color:white;
 }
 
-h1{
+.portfolio-container h1{
+  text-align: center;
+  padding-top: .5em;
   color:white;
 }
